MET-6939 sonar review and cleanup